# Misfits

./: CLAUDE.md  GameDesign.md  README.md  main.py  pyproject.toml  requirements.txt
data/: game_config.yaml
data/events/: chaos_events.json
data/personalities/: base_templates.json
data/simulation_modes/: comedy_chaos.yaml  psychological_deep.yaml
docs/: GETTING_STARTED.md
docs/api/: README.md
docs/deployment/: README.md
docs/modding/: README.md
scripts/: run_tests.py  run_web_gui.py  setup.py  test_setup.py  validate_setup.py
src/characters/: misfit.py  trait_combinations.py
src/core/: ai_personality_engine.py  memory_system.py  simulation_modes.py  world_tick.py
src/ui/: chaos_button.py  intervention_mode.py  observation_panel.py
src/utils/: config_loader.py  llm_interface.py  vector_db.py
src/web_gui/: __init__.py  app.py  config.py  state.py
src/world/: chaos_events.py  environment.py  intervention_system.py
tests/: __init__.py  test_setup.py
tests/web_gui/: test_app.py
